Head installation is now greatly simplified. It is now a member of the CharacterAttributes class.